...
    <string name="reminder_title_label">Reminder\'s title</string>
    <string name="reminder_title_placeholder">Enter the reminder\'s title</string>
    <string name="reminder_description_label">Reminder\'s description</string>
    <string name="reminder_description_placeholder">Enter a detailed description</string>
    <string name="title_activity_locations">LocationsActivity</string>

    <string name="content_description_delete">Delete Point of Interest</string>
    <string name="content_description_edit">Edit Point of Interest</string>
    <string name="geofence_transition_invalid_type">Invalid Geofences transition type</string>
    <string name="access_fine_location_rationale">I need permission to know your current location to remind you when you are close to a Point of Interest.</string>

    <string name="empty_location_list">The Reminder list is empty.\nPlease add some to the map.</string>

...
    <string name="geofence_toast">&lt;span style=\"background-color:yellow; padding:5px\"&gt;&lt;b&gt;%1$s&lt;/b&gt;&lt;/span&gt;</string>
    <string name="poi_details_activity">POIDetailsActivity</string>
    <string name="poi_details_activity_title">Reminder for your current location:</string>
    <string name="poi_details_title">Point of Interest:</string>
    <string name="poi_details_description">Reminder:</string>

    <string name="content_description_location_list">List of Location Reminders</string>

    <string name="facebook_app_id">966783354861155</string>
    <string name="fb_login_protocol_scheme">fb966783354861155</string>
    <string name="facebook_client_token">56789</string>

    <string name="wait_to_load">Loading… please wait</string>
...
