...
    fun navigateBack()
    fun deleteLocation(location: WorldLocation)
    fun editLocation(location: WorldLocation)
    fun toastMessage(message: String)
}

const val LIST_OF_REMINDERS = "list-of-reminders"
const val REMINDER_LIST_CARD = "reminder-list-card"

@AndroidEntryPoint
class ReminderListActivity : ComponentActivity() {
    private lateinit var locationVM: LocationViewModel
    private lateinit var geofenceVM: GeofenceViewModel
...
